# Project_4team_Telechips_

./: .gitignore  bsh_s_uart.c
STM32_모듈 A (일반 배송)/: .cproject  .mxproject  .project  test_weight Debug.launch  test_weight.ioc
STM32_모듈 A (일반 배송)/Core/Inc/: can.h  main.h  weight.h
STM32_모듈 A (일반 배송)/Core/Src/: can.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  weight.c
STM32_모듈 A (일반 배송)/Debug/: makefile  objects.list
STM32_모듈 A (일반 배송)/Debug/Core/Src/: subdir.mk
STM32_모듈 B (냉장 배송)/: .cproject  .mxproject  .project  moduleB_test1.ioc  moduleB_test1.launch
STM32_모듈 B (냉장 배송)/Core/Inc/: can.h  control.h  lm75.h  main.h  motor.h  shared.h  stm32f4xx_hal_conf.h  temperature.h  uart3.h
STM32_모듈 B (냉장 배송)/Core/Src/: can.c  control.c  lm75.c  main.c  motor.c  shared.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  temperature.c  uart3.c
STM32_모듈 B (냉장 배송)/Debug/: makefile  moduleB_test1.elf  moduleB_test1.list  moduleB_test1.map  objects.list
STM32_모듈 B (냉장 배송)/Debug/Core/Src/: can.cyclo  can.d  can.su  control.cyclo  control.d  control.su  lm75.cyclo  lm75.d  lm75.su  main.cyclo  main.d  main.su  motor.cyclo  motor.d  motor.su  shared.d  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk  temperature.cyclo  temperature.d  temperature.su  uart3.cyclo  uart3.d  (+1 more)
pbv_gui/: CMakeLists.txt
pbv_gui/common/: telemetry_client.cpp  telemetry_client.h
pbv_gui/hmi/: hmi_main.cpp  hmi_window.cpp  hmi_window.h
pbv_gui/hmi_pages/: idle_page.h  module_a_page.cpp  module_b_page.cpp  module_b_page.h
pbv_gui/legacy_motor_control/: motor_client.cpp  motor_client.h  motor_main.cpp  motorwindow.h
pbv_gui/motor_monitor/: motor_monitor_window.cpp
pbv_gui/temperature_monitor/: temperaturewindow.cpp  temperaturewindow.h
pbv_gui/weight_monitor/: weight_monitor_main.cpp  weight_monitor_window.cpp  weight_monitor_window.h
uart_service/: pbv_uart_service  uart_service.c
라즈베리파이_리눅스/: AI_init.py  cam.py  drowny.py  eye_seeker.py  gui.py  init.c  init_task  pbv_uart_service
라즈베리파이_리눅스/pbv_gui/: CMakeLists.txt
라즈베리파이_리눅스/pbv_gui/common/: telemetry_client.cpp  telemetry_client.h
라즈베리파이_리눅스/pbv_gui/hmi/: hmi_main.cpp  hmi_window.cpp  hmi_window.h
라즈베리파이_리눅스/pbv_gui/hmi_pages/: idle_page.cpp  module_a_page.h  module_b_page.cpp  module_b_page.h  rpm_gauge_widget.cpp  rpm_gauge_widget.h
라즈베리파이_리눅스/pbv_gui/legacy_motor_control/: motorwindow.cpp
라즈베리파이_리눅스/pbv_gui/motor_monitor/: motor_monitor_main.cpp  motor_monitor_window.h
라즈베리파이_리눅스/pbv_gui/power_monitor/: power_main.cpp  power_window.cpp  power_window.h
라즈베리파이_리눅스/pbv_gui/temperature_monitor/: temperature_main.cpp
라즈베리파이_리눅스/pbv_gui/weight_monitor/: weight_monitor_window.cpp
라즈베리파이_리눅스/uart_service/: Makefile  uart_service.c
(+3 files in other folders)
